# glkit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
glkit/: gl_base.hpp  gl_camera.hpp  gl_mesh.hpp  gl_mesh_manager.hpp  gl_model.hpp  gl_shader.hpp  gl_shader_manager.hpp  gl_square.hpp  gl_xy_plane.hpp  imgui_app.hpp  main.cpp
shaders/: light.fs  light.vs  mesh.fs  mesh.vs  object.fs  object.vs  xy_plane.fs  xy_plane.vs
